# General-Cargo-Sorting-System

./: .env.example  .gitignore  README.md  start-docker.cmd  stop-docker.cmd
algorithm-service/: .dockerignore  Dockerfile  pyproject.toml
algorithm-service/app/: __init__.py  main.py
algorithm-service/app/api/: routes.py
algorithm-service/app/core/: config.py
algorithm-service/app/models/: __init__.py  domain.py
algorithm-service/app/schemas/: __init__.py  solver.py
algorithm-service/app/services/: plan_service.py  sample_data_service.py
algorithm-service/app/solver/: __init__.py  evaluator.py  geometry.py  hold_allocator.py  optimizer.py  packer.py  rule_checker.py  stability.py
algorithm-service/app/utils/: __init__.py  logging.py
algorithm-service/tests/: test_solver_core.py
backend/: Dockerfile  pom.xml
docker/: docker-compose.yml
docker/nginx/: default.conf
docs/: api.md  architecture.md  dev-notes.md  formula.md  paper-theoretical-foundation.md  patent-driven-optimization.md  project-summary.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.spec.ts  client.ts  stowage.ts
frontend/src/assets/: main.css
frontend/src/components/: AppNumberField.vue  HoldViewer.vue  MetricCards.spec.ts  MetricCards.vue  MetricCharts.vue  ShipStowageOverview.vue  StowageDeckPlan.vue  WarningList.vue
frontend/src/layouts/: AppLayout.vue
frontend/src/plugins/: vuetify.ts
frontend/src/router/: index.ts
frontend/src/store/: auth.ts  plan.ts  (+1 more)
(+66 files in other folders)
